<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>message_filters</name>
  <version>2.0.0</version>
  <description>
    A set of ROS2 message filters which take in messages and may output those messages at a later time, based on the conditions that filter needs met.
  </description>
  <maintainer email="ethan.gao@linux.intel.com">Ethan Gao</maintainer>
  <license>Apache</license>
  <url>https://github.com/intel/ros2_message_filters</url>
  <author>Jing Wang</author>
  <author>Josh Faust</author>
  <author>Vijay Pradeep</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
